// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fonts tests creates the correct font styles for ar 1`] = `
Object {
  "large": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "17px",
    "fontWeight": 300,
  },
  "medium": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "14px",
    "fontWeight": 400,
  },
  "mediumPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "15px",
    "fontWeight": 400,
  },
  "mega": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "72px",
    "fontWeight": 100,
  },
  "small": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "smallPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "13px",
    "fontWeight": 400,
  },
  "superLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "42px",
    "fontWeight": 100,
  },
  "tiny": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 600,
  },
  "xLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "21px",
    "fontWeight": 100,
  },
  "xSmall": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "11px",
    "fontWeight": 400,
  },
  "xxLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "28px",
    "fontWeight": 100,
  },
}
`;

exports[`fonts tests creates the correct font styles for en 1`] = `
Object {
  "large": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "17px",
    "fontWeight": 300,
  },
  "medium": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "14px",
    "fontWeight": 400,
  },
  "mediumPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "15px",
    "fontWeight": 400,
  },
  "mega": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "72px",
    "fontWeight": 100,
  },
  "small": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "smallPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "13px",
    "fontWeight": 400,
  },
  "superLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "42px",
    "fontWeight": 100,
  },
  "tiny": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 600,
  },
  "xLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "21px",
    "fontWeight": 100,
  },
  "xSmall": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "11px",
    "fontWeight": 400,
  },
  "xxLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "28px",
    "fontWeight": 100,
  },
}
`;

exports[`fonts tests creates the correct font styles for ja 1`] = `
Object {
  "large": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "17px",
    "fontWeight": 300,
  },
  "medium": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "14px",
    "fontWeight": 400,
  },
  "mediumPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "15px",
    "fontWeight": 400,
  },
  "mega": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "72px",
    "fontWeight": 100,
  },
  "small": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "smallPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "13px",
    "fontWeight": 400,
  },
  "superLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "42px",
    "fontWeight": 100,
  },
  "tiny": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 600,
  },
  "xLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "21px",
    "fontWeight": 100,
  },
  "xSmall": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "11px",
    "fontWeight": 400,
  },
  "xxLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "28px",
    "fontWeight": 100,
  },
}
`;
